2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed options which is only valid for URIs specified in
	command-line.  If they are left, because op is used as a template
	for new RequestGroup(such as created in XML-RPC command,
	BtPostDownloadHandler etc), they causes unintentional effect.
	* src/main.cc

2009-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refer to option value of PREF_OUT only in download_helper.
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc

2009-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Now addUri XML-RPC method accepts BitTorrent Magnet URI.
	* src/download_helper.cc
	* src/download_helper.h
	* src/XmlRpcMethodImpl.cc

2009-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for changeOption XML-RPC method.
	* doc/aria2c.1.txt

2009-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-max-peers option to changeOption XML-RPC method.
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethodImpl.cc
	* test/XmlRpcMethodTest.cc

2009-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test case for PREF_BT_REQUEST_PEER_SPEED_LIMIT
	* test/XmlRpcMethodTest.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed redundant DownloadContext::hasAttribute(...) calls.
	* src/ConsoleStatCalc.cc
	* src/RequestGroup.cc
	* src/XmlRpcMethodImpl.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the number of tracker request attempt from 5 to 2.
	* src/TrackerWatcherCommand.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use host and protocol in original URI, because URI selector
	selects URI based on original URI, not redirected one.
	* src/Request.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug which causes segmentation fault with tellWaiting